# prismacloud-policy-as-code-azure-C

./: README.md  app.py  pyproject.toml  requirements.txt
policies/: azure-acr-must-have-diagnostic-setting  azure-acr-must-utilize-private-endpoints  azure-storage-account-must-enable-softdelete
policies/policies/: azure-prd-storage-check-GRS  azure-storage-accounts-must-contain-classification-tag  azure-storage-accounts-must-contain-environment-tag
