[tool.poetry]
name = "prismacloud-policy-as-code"
version = "0.1.0"
description = ""
authors = ["Kevin C-Dubois <kcdubois@paloaltonetworks.com>"]
readme = "README.md"
packages = [{include = "prismacloud_policy_as_code"}]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.23.3"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
